# RPi-AES67-receiver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
_codeql_build_dir/: bidirectional  rpi-aes67  simple_receiver  simple_sender
config/: config.json
docs/: API.md  ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md
examples/: bidirectional.cpp  simple_receiver.cpp  simple_sender.cpp
include/rpi_aes67/: config.h  logger.h  nmos_node.h  pipewire_io.h  ptp_sync.h  receiver.h  sender.h
scripts/: install.sh  setup_network.sh  setup_ptp.sh
src/: aes67_receiver.cpp  aes67_receiver.h  config.cpp  logger.cpp  main.cpp  nmos_node.cpp  pipewire_bridge.h  pipewire_io.cpp  ptp_sync.cpp  receiver.cpp  sender.cpp
systemd/: aes67-bidirectional.service  aes67-receiver.service  aes67-sender.service
